# checkedbox

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  pyproject.toml  requirements.txt
.dvc/: config
data/: .gitignore  model.zip.dvc  raw.dvc  raw.zip.dvc
notebooks/: prepare.ipynb  rename.ipynb  upload.ipynb  utils.ipynb
src/: main.py
src/libs/: dataset.py  mlops.py  models.py  utils.py
